--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
                 <li><a href="/login">Login</a></li>
             </ul>
         </nav>
+        <section class="banner">
+            <div class="banner-info">
+               <h1 class="banner-title">Brand New<br> Group of Architects</h1>
+               <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+                some form, by injected humour, or randomised words which don't look even</p>
+                <button class="button">Explore Now</button>
+            </div>
+            <div class="banner-img">
+                <img src="images/banner.png" alt="">
+            </div>
+        </section>
     </header>
     <main>
 
