--- a/index.html
+++ b/index.html
@@ -32,7 +32,21 @@
         </section>
     </header>
     <main>
-
+        <section class="our-features">
+            <div class="features-img">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="features-info">
+                <h1 class="heading"><span class="features-h1">Quick list</span> of Our <br> <span class="features-h2">Features</span></h1>
+                <p class="section-description">There are many variations of passages of Lorem Ipsum available,
+                    but the majority have suffered alteration in some form, by injected
+                    humour, or randomised words which don't look even</p>
+                    <button class="button">Explore Now</button>
+            </div>
+        </section>
     </main>
     <footer>
 
