features details section complete and responsive

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,9 @@
     <!-- css link -->
     <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
+    <!-- Heading Section -->
     <header>
         <nav>
             <h1 class="heading">G3 Architects</h1>
@@ -19,11 +22,13 @@
                 <li><a href="/login">Login</a></li>
             </ul>
         </nav>
+        <!-- Banner Section -->
         <section class="banner">
             <div class="banner-info">
-               <h1 class="banner-title">Brand New<br> Group of Architects</h1>
-               <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
-                some form, by injected humour, or randomised words which don't look even</p>
+                <h1 class="banner-title">Brand New<br> Group of Architects</h1>
+                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in
+                    some form, by injected humour, or randomised words which don't look even</p>
                 <button class="button">Explore Now</button>
             </div>
             <div class="banner-img">
@@ -32,6 +37,7 @@
         </section>
     </header>
     <main>
+        <!-- Team Work Section -->
         <section class="our-features">
             <div class="features-img">
                 <img src="images/team1.png" alt="">
@@ -39,12 +45,51 @@
                 <img src="images/team3.png" alt="">
                 <img src="images/team4.png" alt="">
             </div>
-            <div class="features-info">
-                <h1 class="heading"><span class="features-h1">Quick list</span> of Our <br> <span class="features-h2">Features</span></h1>
-                <p class="section-description">There are many variations of passages of Lorem Ipsum available,
-                    but the majority have suffered alteration in some form, by injected
-                    humour, or randomised words which don't look even</p>
-                    <button class="button">Explore Now</button>
+            <div class="features-discursion-info">
+                <h1 class="heading"><span class="features-h1">Quick list</span> of Our <br> <span
+                        class="features-h2">Features</span></h1>
+                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+                <button class="button">Explore Now</button>
+            </div>
+        </section>
+        <!-- Features Details Section-->
+        <section class="features-details">
+            <div class="features-description">
+                <h1 class="heading">Features you will <br>
+                    love & enjoy</h1>
+                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humou randomised words which don't look even</p>
+
+                <div class="features-description-list">
+                    <div>
+                        <h3>Desktop & Mobile Version</h3>
+                    <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alterat some form, by injected humour, or randomised...........</p>
+                    </div>
+
+                    <div>
+                        <h3>Drag & Drop Builder</h3>
+                    <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alterat some form, by injected humour, or randomised...........</p>
+
+                    </div>
+                    <div>
+                        <h3>Awesome Modern Design</h3>
+                    <p class="section description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alterat some form, by injected humour, or randomised...........</p>
+
+                    </div>
+                    <div>
+                        <h3>Super Easy to Edit</h3>
+                    <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alterat some form, by injected humour, or randomised...........</p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="features-detail-pic">
+                <img src="images/architect.png" alt="">
+            <div class="experience">
+                <h2>10+ Year <br><span>Experience</span></h2>
+               
+            </div>
             </div>
         </section>
     </main>
@@ -52,4 +97,5 @@
 
     </footer>
 </body>
+
 </html>
