--- a/index.html
+++ b/index.html
@@ -59,69 +59,95 @@
             <div class="features-description">
                 <h1 class="heading">Features you will <br>
                     love & enjoy</h1>
-                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humou randomised words which don't look even</p>
+                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humou randomised words which don't look
+                    even</p>
 
                 <div class="features-description-list">
                     <div>
                         <h3>Desktop & Mobile Version</h3>
-                    <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alterat some form, by injected humour, or randomised...........</p>
+                        <p class="section-description">There are many variations of passages of Lorem Ipsum available,
+                            but the majority have suffered alterat some form, by injected humour, or
+                            randomised...........</p>
                     </div>
 
                     <div>
                         <h3>Drag & Drop Builder</h3>
-                    <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alterat some form, by injected humour, or randomised...........</p>
+                        <p class="section-description">There are many variations of passages of Lorem Ipsum available,
+                            but the majority have suffered alterat some form, by injected humour, or
+                            randomised...........</p>
 
                     </div>
                     <div>
                         <h3>Awesome Modern Design</h3>
-                    <p class="section description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alterat some form, by injected humour, or randomised...........</p>
+                        <p class="section-description">There are many variations of passages of Lorem Ipsum available,
+                            but the majority have suffered alterat some form, by injected humour, or
+                            randomised...........</p>
 
                     </div>
                     <div>
                         <h3>Super Easy to Edit</h3>
-                    <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alterat some form, by injected humour, or randomised...........</p>
+                        <p class="section-description">There are many variations of passages of Lorem Ipsum available,
+                            but the majority have suffered alterat some form, by injected humour, or
+                            randomised...........</p>
                     </div>
 
                 </div>
             </div>
             <div class="features-detail-pic">
                 <img src="images/architect.png" alt="">
-               <div class="experience">
-                <h2>10+ Year <br><span>Experience</span></h2>
-               </div>
+                <div class="experience">
+                    <h2>10+ Year <br><span>Experience</span></h2>
+                </div>
             </div>
         </section>
 
-            <!-- Achievement Section -->
-            <section class="our-ahievement"> 
+        <!-- Achievement Section -->
+        <section class="our-achievement">
+            <div class="achievement-info">
                 <h1 class="heading">Some Facts</h1>
-                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but
-                    the majority have suffered alteration.</p>
-                    <div class="achievement-list">
-                        <div class="achievement">
-                            <img src="images/icons/ribon.png" alt="">
-                            <h1 class="heading">54</h1>
-                            <p class="section-description">Awards Winning</p>
-                        </div>
-                        <div class="achievement">
-                            <img src="images/icons/projects.png" alt="">
-                            <h1 class="heading">1458</h1>
-                            <p class="section-description">Project Finished</p>
-                        </div>
-                        <div class="achievement">
-                            <img src="images/icons/customers.png" alt="">
-                            <h1 class="heading">590</h1>
-                            <p class="section-description">Clients Worked</p>
-                        </div>
-                        <div class="achievement">
-                            <img src="images/icons/email.png" alt="">
-                            <h1 class="heading">22578</h1>
-                            <p class="section-description">Email Send</p>
-                        </div>
-                    </div>
-            </section>
+            <p class="section-description">There are many variations of passages of Lorem Ipsum available, but
+                the majority have suffered alteration.</p>
+            </div>
+            <div class="achievement-list">
+                <div class="achievement">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h1 class="heading">54</h1>
+                    <p class="section-description">Awards Winning</p>
+                </div>
+                <div class="achievement">
+                    <img src="images/icons/projects.png" alt="">
+                    <h1 class="heading">1458</h1>
+                    <p class="section-description">Project Finished</p>
+                </div>
+                <div class="achievement">
+                    <img src="images/icons/customers.png" alt="">
+                    <h1 class="heading">590</h1>
+                    <p class="section-description">Clients Worked</p>
+                </div>
+                <div class="achievement">
+                    <img src="images/icons/email.png" alt="">
+                    <h1 class="heading">22578</h1>
+                    <p class="section-description">Email Send</p>
+                </div>
+            </div>
+        </section>
 
-       
+
+        <section class="our-sponsors">
+            <div class="sponsors-info">
+                <h1 class="heading">Our Sponsors</h1>
+                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised  which don't look even</p>
+            </div>
+            <div class="sponsors-logo">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
+
     </main>
     <footer>
 
