--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
     </main>
     <footer>
-
+        <p class="section-description">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 
