--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
         <section class="banner">
             <div class="banner-info">
                 <h1 class="banner-title">Brand New<br> Group of Architects</h1>
-                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the
-                    majority have suffered alteration in
-                    some form, by injected humour, or randomised words which don't look even</p>
+                <p class="section-description">An architect is a person who plans, designs and oversees the construction of buildings.To practice architecture means to provide services in connection with the design of buildings and the space within the site surrounding the buildings that have human occupancy or use as their principal purpose</p>
                 <button class="button">Explore Now</button>
             </div>
             <div class="banner-img">
@@ -48,9 +46,8 @@
             <div class="features-discursion-info">
                 <h1 class="heading"><span class="features-h1">Quick list</span> of Our <br> <span
                         class="features-h2">Features</span></h1>
-                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the
-                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
-                    look even</p>
+                <p class="section-description">Throughout history, societies have developed unique types of architecture, reflecting local cultural, geographic, and economic forces. The evolution of architectural styles provides a dynamic illustration of the currents of human history, and recognizing different styles is a key skill for any student of architecture.
+                </p>
                 <button class="button">Explore Now</button>
             </div>
         </section>
@@ -59,37 +56,27 @@
             <div class="features-description">
                 <h1 class="heading">Features you will <br>
                     love & enjoy</h1>
-                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the
-                    majority have suffered alteration in some form, by injected humou randomised words which don't look
-                    even</p>
+                <p class="section-description">Architecture is the craft of planning, designing, and constructing buildings and other physical structures. While the profession of the architect has taken on new definition and prestige in the last few centuries, we humans have been incorporating distinctive design elements into our structures for thousands of years.</p>
 
                 <div class="features-description-list">
                     <div>
                         <h3>Desktop & Mobile Version</h3>
-                        <p class="section-description">There are many variations of passages of Lorem Ipsum available,
-                            but the majority have suffered alterat some form, by injected humour, or
-                            randomised...........</p>
+                        <p class="section-description">In the modern era, architectural styles have evolved at an unprecedented pace, and architects consciously select from among these styles for their work. Some architects work with signature styles, while others may adopt elements of different styles for individual projects.</p>
                     </div>
 
                     <div>
                         <h3>Drag & Drop Builder</h3>
-                        <p class="section-description">There are many variations of passages of Lorem Ipsum available,
-                            but the majority have suffered alterat some form, by injected humour, or
-                            randomised...........</p>
+                        <p class="section-description">An architectural style can create a particular feeling for both a building’s occupants and those observing it from the outside. A building’s style can also help it either blend in with or stand out from its surroundings, such as the other buildings in the area and the natural environment.</p>
 
                     </div>
                     <div>
                         <h3>Awesome Modern Design</h3>
-                        <p class="section-description">There are many variations of passages of Lorem Ipsum available,
-                            but the majority have suffered alterat some form, by injected humour, or
-                            randomised...........</p>
+                        <p class="section-description">In the modern era, architectural styles have evolved at an unprecedented pace, and architects consciously select from among these styles for their work. Some architects work with signature styles, while others may adopt elements of different styles for individual projects.</p>
 
                     </div>
                     <div>
                         <h3>Super Easy to Edit</h3>
-                        <p class="section-description">There are many variations of passages of Lorem Ipsum available,
-                            but the majority have suffered alterat some form, by injected humour, or
-                            randomised...........</p>
+                        <p class="section-description">An architectural style can create a particular feeling for both a building’s occupants and those observing it from the outside. A building’s style can also help it either blend in with or stand out from its surroundings, such as the other buildings in the area and the natural environment.</p>
                     </div>
 
                 </div>
@@ -106,8 +93,7 @@
         <section class="our-achievement">
             <div class="achievement-info">
                 <h1 class="heading">Some Facts</h1>
-            <p class="section-description">There are many variations of passages of Lorem Ipsum available, but
-                the majority have suffered alteration.</p>
+            <p class="section-description">The architectural design brief forms the very beginning of the design process. </p>
             </div>
             <div class="achievement-list">
                 <div class="achievement">
@@ -133,11 +119,11 @@
             </div>
         </section>
 
-
+        <!-- Sponsor Section -->
         <section class="our-sponsors">
             <div class="sponsors-info">
                 <h1 class="heading">Our Sponsors</h1>
-                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised  which don't look even</p>
+                <p class="section-description">here are a lot of events that are a part of a lot of business ideas and growth of a lot of people and to help them get fluid gain and its not easy to make it happen at all times, that is when sponsors come to rescue.They sign a deal to sponsor an event for the in other to get a bit of marketing for thecause at well. Here are some thank you notsponsoring.</p>
             </div>
             <div class="sponsors-logo">
                 <img src="images/sponsors/spotify.png" alt="">
@@ -147,7 +133,15 @@
                 <img src="images/sponsors/figma.png" alt="">
             </div>
         </section>
-
+        
+        <!-- Bonus Section  -->
+        <section class="future-sponsor">
+            <h1 class="heading">Our Upcoming Sponsor Partner are :</h1>
+            <div>
+                <img src="images/Apple-Logo.png" alt="">
+                <img src="images/Flipkart-logo.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
         <p class="section-description">All rights reserved copyright@2023 startup landing page design</p>
